{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 12,
  "lineage": "7936cf09-9e27-18d6-f012-249dfd1615fd",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "web_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/bb97b408-9e37-419f-95a3-84c116ff99bd/resourceGroups/auto-hosting-rg/providers/Microsoft.Network/networkInterfaces/web-nic",
            "internal_domain_name_suffix": "sroclbvoxsaefdnihodis05zzb.rx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/bb97b408-9e37-419f-95a3-84c116ff99bd/resourceGroups/auto-hosting-rg/providers/Microsoft.Network/publicIPAddresses/web-ip",
                "subnet_id": "/subscriptions/bb97b408-9e37-419f-95a3-84c116ff99bd/resourceGroups/auto-hosting-rg/providers/Microsoft.Network/virtualNetworks/auto-hosting-vnet/subnets/web-subnet"
              }
            ],
            "location": "centralindia",
            "mac_address": "7C-1E-52-3D-24-12",
            "name": "web-nic",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "auto-hosting-rg",
            "virtual_machine_id": "/subscriptions/bb97b408-9e37-419f-95a3-84c116ff99bd/resourceGroups/auto-hosting-rg/providers/Microsoft.Compute/virtualMachines/web-vm"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_public_ip.web_ip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.web_subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "web_nic_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/bb97b408-9e37-419f-95a3-84c116ff99bd/resourceGroups/auto-hosting-rg/providers/Microsoft.Network/networkInterfaces/web-nic|/subscriptions/bb97b408-9e37-419f-95a3-84c116ff99bd/resourceGroups/auto-hosting-rg/providers/Microsoft.Network/networkSecurityGroups/web-nsg",
            "network_interface_id": "/subscriptions/bb97b408-9e37-419f-95a3-84c116ff99bd/resourceGroups/auto-hosting-rg/providers/Microsoft.Network/networkInterfaces/web-nic",
            "network_security_group_id": "/subscriptions/bb97b408-9e37-419f-95a3-84c116ff99bd/resourceGroups/auto-hosting-rg/providers/Microsoft.Network/networkSecurityGroups/web-nsg"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_interface.web_nic",
            "azurerm_network_security_group.web_nsg",
            "azurerm_public_ip.web_ip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.web_subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "web_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/bb97b408-9e37-419f-95a3-84c116ff99bd/resourceGroups/auto-hosting-rg/providers/Microsoft.Network/networkSecurityGroups/web-nsg",
            "location": "centralindia",
            "name": "web-nsg",
            "resource_group_name": "auto-hosting-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "allow-ssh-from-my-ip",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "103.21.91.77/32",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "allow_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "80",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/bb97b408-9e37-419f-95a3-84c116ff99bd/resourceGroups/auto-hosting-rg/providers/Microsoft.Network/networkSecurityGroups/web-nsg/securityRules/allow-http",
            "name": "allow-http",
            "network_security_group_name": "web-nsg",
            "priority": 101,
            "protocol": "Tcp",
            "resource_group_name": "auto-hosting-rg",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_security_group.web_nsg",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "22",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/bb97b408-9e37-419f-95a3-84c116ff99bd/resourceGroups/auto-hosting-rg/providers/Microsoft.Network/networkSecurityGroups/web-nsg/securityRules/allow-ssh-from-my-ip",
            "name": "allow-ssh-from-my-ip",
            "network_security_group_name": "web-nsg",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "auto-hosting-rg",
            "source_address_prefix": "103.21.91.77/32",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_security_group.web_nsg",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "web_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/bb97b408-9e37-419f-95a3-84c116ff99bd/resourceGroups/auto-hosting-rg/providers/Microsoft.Network/publicIPAddresses/web-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "98.70.121.44",
            "ip_version": "IPv4",
            "location": "centralindia",
            "name": "web-ip",
            "resource_group_name": "auto-hosting-rg",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "web_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/bb97b408-9e37-419f-95a3-84c116ff99bd/resourceGroups/auto-hosting-rg/providers/Microsoft.Network/virtualNetworks/auto-hosting-vnet/subnets/web-subnet",
            "name": "web-subnet",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "auto-hosting-rg",
            "virtual_network_name": "auto-hosting-vnet"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "86255c94-bcae-4280-8da8-3b86896bf9c9",
            "id": "/subscriptions/bb97b408-9e37-419f-95a3-84c116ff99bd/resourceGroups/auto-hosting-rg/providers/Microsoft.Network/virtualNetworks/auto-hosting-vnet",
            "location": "centralindia",
            "name": "auto-hosting-vnet",
            "resource_group_name": "auto-hosting-rg",
            "subnet": [
              {
                "address_prefix": "10.0.1.0/24",
                "id": "/subscriptions/bb97b408-9e37-419f-95a3-84c116ff99bd/resourceGroups/auto-hosting-rg/providers/Microsoft.Network/virtualNetworks/auto-hosting-vnet/subnets/web-subnet",
                "name": "web-subnet"
              }
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    }
  ]
}